--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,4 +1,32 @@
 .logo-header{
-    height: 70px;
+    height: 80px;
     width: auto;
 }
+.active{
+    background-color: black;
+    --bs-navbar-active-color: white ; 
+}  
+.item-style{
+    font-weight: 700;
+    color: black;
+    border-radius: 50px;
+}
+.nav-link{
+    padding-right: 20px;
+    padding-left: 20px;
+    --bs-navbar-nav-link-padding-x: 20px;
+    --bs-nav-link-hover-color: none; 
+    --bs-nav-link-font-size: 13px;
+}
+.nav-link:hover{
+    background-color: black;
+    color: white;
+}
+.nav-link:focus{
+    color: auto !important;
+}
+.navbar-brand{
+    padding-top: 8px;
+}
+
+
