--- a/assets/css/slideshow.css
+++ b/assets/css/slideshow.css
@@ -13,3 +13,12 @@
     border-radius: 5px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
+.slideblank{
+    height: 518px;
+}
+
+@media (max-width: 768px) { 
+    .img-carousel {
+         min-width: 1200px;
+    }
+}
