--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -3,3 +3,43 @@
     color: black;
     font: "SamsungSharpSans";
 }
+
+/* Filter */
+
+.list-group{
+    --bs-list-group-border-width: 0px;
+}
+.list-group-item{
+    width: 10%;
+}
+.underline{
+    color: black;
+    font-weight: bold;
+}
+.underline::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 34%;
+    width: 30%;
+    height: 0.15em;
+    background-color: black;
+    opacity: 0;
+    transform: scale(0);
+    transform-origin: center;
+    transition: opacity 300ms, transform 300ms;
+}
+
+/* Cards */
+
+.underline:hover::after {
+  opacity: 1;
+  transform: scale(1);
+}
+.card{
+    background-color: #f8f4f4;
+    border: none;
+}
+.padding-card{
+    padding: 40px 85px;
+}
