--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -32,6 +32,9 @@
 .navbar-toggler{
     border: none;
 }
+.header-container{
+    max-width: 2000px !important; 
+}
 
 @media (max-width: 500px) {
     .navbar-toggler{
