--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,21 +1,19 @@
 .logo-header{
-    max-height: 80px;
-    min-width: 60px;
+    max-height: 70px;
+    min-width: 50px;
     width: 100%;
-}
+}   
 .active{
     background-color: black;
     --bs-navbar-active-color: white ; 
 }  
 .item-style{
-    font-weight: 700;
+    font-family: 'SamsungOne700';
     color: black;
     border-radius: 50px;
 }
 .nav-link{
-    padding-right: 20px;
-    padding-left: 20px;
-    --bs-navbar-nav-link-padding-x: 20px;
+    --bs-navbar-nav-link-padding-x: 16px;
     --bs-nav-link-hover-color: none; 
     --bs-nav-link-font-size: 13px;
 }
