--- a/assets/css/clients.css
+++ b/assets/css/clients.css
@@ -2,8 +2,7 @@
     transition: all 0.4s ease;
 }
 .section-clients{
-    border-top: 1px solid #ced4da;
-    border-bottom: 1px solid #ced4da;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 .sabesp-img{
     width: 53px;
