--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -48,6 +48,7 @@
     background-color: #f8f4f4;
     border-radius: 25px;
     border: none;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
 .padding-card{
     padding: 40px 85px;
