--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -17,3 +17,18 @@
 .card-text-services{
     font-family: 'SamsungOne400'
 }
+.img-services{
+	animation: float 2.5s ease-in-out infinite;
+}
+
+@keyframes float {
+	0% {
+		transform: translatey(0px);
+	}
+	50% {
+		transform: translatey(-20px);
+	}
+	100% {
+		transform: translatey(0px);
+	}
+}
