Newsletter and AboutUs - Done

--- a/assets/css/services.css
+++ b/assets/css/services.css
@@ -1,6 +1,7 @@
 .datacenter-img{
     background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../images/services.jpg');
     background-size: cover;
+	background-attachment: scroll,fixed;
 }
 .card-services{
     width: 265px;
@@ -26,7 +27,7 @@
 		transform: translatey(0px);
 	}
 	50% {
-		transform: translatey(-20px);
+		transform: translatey(-5px);
 	}
 	100% {
 		transform: translatey(0px);
